--- a/notebooks/1 - 10.ipynb
+++ b/notebooks/1 - 10.ipynb
@@ -150,8 +150,8 @@
     "    iterator = 1\n",
     "    while True:\n",
     "        iterator += 1\n",
-    "        if (600851475143 % iterator) == 0:\n",
-    "            test_factor = (600851475143 / iterator)\n",
+    "        if (number % iterator) == 0:\n",
+    "            test_factor = (number / iterator)\n",
     "\n",
     "            if is_prime(test_factor):\n",
     "                break\n",
@@ -171,11 +171,117 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
+   "cell_type": "markdown",
    "metadata": {
     "collapsed": true
    },
+   "source": [
+    "## Largest palindrome product\n",
+    "### Problem 4"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "A palindromic number reads the same both ways. The largest palindrome made from the product of two 2-digit numbers is 9009 = 91 × 99.\n",
+    "\n",
+    "Find the largest palindrome made from the product of two 3-digit numbers."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 12,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "(6, 5)"
+      ]
+     },
+     "execution_count": 12,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# number of digits\n",
+    "\n",
+    "max_number = 999 * 999\n",
+    "min_number = 100 * 100\n",
+    "\n",
+    "len(str(max_number)) , len(str(min_number))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 73,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "906609\n",
+      "Wall time: 3.37 s\n"
+     ]
+    }
+   ],
+   "source": [
+    "def generate_palindromic_by_digits(n):\n",
+    "    list_palindromic = []\n",
+    "    half_digits = (n % 2) \n",
+    "    \n",
+    "    if (n % 2) == 0:\n",
+    "        half_digits = (n / 2)\n",
+    "        initial_iterator = int(10**(half_digits-1))\n",
+    "        last_iterator = int(10**(half_digits))\n",
+    "        \n",
+    "        for i in range(initial_iterator, last_iterator):\n",
+    "            first_part = str(i)\n",
+    "            second_part = first_part[::-1]\n",
+    "        \n",
+    "            palindromic_number = first_part + second_part\n",
+    "            list_palindromic.append(palindromic_number)\n",
+    "        \n",
+    "    return list_palindromic\n",
+    "\n",
+    "def get_factos(n):\n",
+    "    factors = [n]\n",
+    "    for x in range(1, int(n/2) + 1):\n",
+    "        if (n % x) == 0:\n",
+    "            factors.append(x)\n",
+    "            \n",
+    "    return factors\n",
+    "\n",
+    "def main():\n",
+    "    list_palindromic = generate_palindromic_by_digits(6)\n",
+    "    list_palindromic.sort(reverse=True)\n",
+    "\n",
+    "    for palindromic in list_palindromic:\n",
+    "        palindromic = int(palindromic)\n",
+    "        factors_number = get_factos(palindromic)\n",
+    "        three_digits_factors = [x for x in factors_number if len(str(x)) == 3 and len(str(int(palindromic/x))) == 3]\n",
+    "        if len(three_digits_factors) == 2:\n",
+    "            print (palindromic)\n",
+    "            break\n",
+    "            \n",
+    "if __name__ == \"__main__\":\n",
+    "    %time main()   "
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "---"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
    "outputs": [],
    "source": []
   }
