--- a/notebooks/1-10.ipynb
+++ b/notebooks/1-10.ipynb
@@ -13,14 +13,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 85,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Wall time: 501 µs\n"
+      "Wall time: 0 ns\n"
      ]
     },
     {
@@ -29,7 +29,7 @@
        "233168"
       ]
      },
-     "execution_count": 2,
+     "execution_count": 85,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -63,7 +63,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 86,
    "metadata": {},
    "outputs": [
     {
@@ -71,7 +71,7 @@
      "output_type": "stream",
      "text": [
       "4613732\n",
-      "Wall time: 0 ns\n"
+      "Wall time: 501 µs\n"
      ]
     }
    ],
@@ -123,7 +123,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 87,
    "metadata": {},
    "outputs": [
     {
@@ -131,7 +131,7 @@
      "output_type": "stream",
      "text": [
       "6857.0\n",
-      "Wall time: 13.7 s\n"
+      "Wall time: 14.4 s\n"
      ]
     }
    ],
@@ -139,7 +139,6 @@
     "number = 600851475143\n",
     "\n",
     "def is_prime(n):\n",
-    "    factors = []\n",
     "    for x in range(2, int((n/2)) + 1):\n",
     "        if n % x == 0:\n",
     "            return False\n",
@@ -191,7 +190,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 88,
    "metadata": {},
    "outputs": [
     {
@@ -200,7 +199,7 @@
        "(6, 5)"
       ]
      },
-     "execution_count": 12,
+     "execution_count": 88,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -216,7 +215,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 73,
+   "execution_count": 89,
    "metadata": {},
    "outputs": [
     {
@@ -224,7 +223,7 @@
      "output_type": "stream",
      "text": [
       "906609\n",
-      "Wall time: 3.37 s\n"
+      "Wall time: 3.57 s\n"
      ]
     }
    ],
@@ -279,9 +278,159 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Smallest multiple\n",
+    "### Problem 5"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "2520 is the smallest number that can be divided by each of the numbers from 1 to 10 without any remainder.\n",
+    "\n",
+    "What is the smallest positive number that is evenly divisible by all of the numbers from 1 to 20?"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 163,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# smallest = (2*3*5*7*11*13*17) * factor"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 184,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Counter({2: 2})\n",
+      "Counter({2: 1, 3: 1})\n",
+      "Counter({2: 3})\n",
+      "Counter({3: 2})\n",
+      "Counter({2: 1, 5: 1})\n",
+      "Counter({2: 2, 3: 1})\n",
+      "Counter({2: 1, 7: 1})\n",
+      "Counter({3: 1, 5: 1})\n",
+      "Counter({2: 4})\n",
+      "Counter({3: 2, 2: 1})\n",
+      "Counter({2: 2, 5: 1})\n"
+     ]
+    }
+   ],
+   "source": [
+    "from collections import Counter\n",
+    "\n",
+    "def is_prime(n):\n",
+    "    for x in range(2, int((n/2)) + 1):\n",
+    "        if (n % x) == 0:\n",
+    "            return False\n",
+    "            \n",
+    "    return True\n",
+    "\n",
+    "def get_primes(n):\n",
+    "    primes = []\n",
+    "    for number in range(2, n+1):\n",
+    "        if is_prime(number):\n",
+    "            primes.append(number)\n",
+    "            \n",
+    "    return primes\n",
+    "\n",
+    "def get_primes_factors(n):\n",
+    "    primes = get_primes(n)\n",
+    "    primes.reverse()\n",
+    "    factor_prime = primes.pop()\n",
+    "    factors = []\n",
+    "    \n",
+    "    while True:\n",
+    "        if (n % factor_prime) == 0:\n",
+    "            factors.append(factor_prime)\n",
+    "            n = n/factor_prime\n",
+    "            \n",
+    "            if n == 1:\n",
+    "                break\n",
+    "        else:\n",
+    "            factor_prime = primes.pop()\n",
+    "        \n",
+    "    return factors\n",
+    "\n",
+    "\n",
+    "for number in range(2, 21):\n",
+    "    primes_factor = get_primes_factors(number)\n",
+    "    if len(primes_factor) >= 2:\n",
+    "        print(Counter(get_primes_factors(number)))\n",
+    "        \n",
+    "smallest = (2*3*5*7*11*13*17*19) * (2*2*2*3)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 186,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "232792560"
+      ]
+     },
+     "execution_count": 186,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "smallest = (2*3*5*7*11*13*17*19) * (2*2*2*3)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "---"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": []
   }
