--- a/notebooks/1-10.ipynb
+++ b/notebooks/1-10.ipynb
@@ -305,7 +305,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 184,
+   "execution_count": 187,
    "metadata": {},
    "outputs": [
     {
@@ -366,9 +366,7 @@
     "for number in range(2, 21):\n",
     "    primes_factor = get_primes_factors(number)\n",
     "    if len(primes_factor) >= 2:\n",
-    "        print(Counter(get_primes_factors(number)))\n",
-    "        \n",
-    "smallest = (2*3*5*7*11*13*17*19) * (2*2*2*3)"
+    "        print(Counter(get_primes_factors(number)))"
    ]
   },
   {
@@ -399,31 +397,88 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
-   "outputs": [],
-   "source": []
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Sum square difference\n",
+    "### Problem 6"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "The sum of the squares of the first ten natural numbers is,\n",
+    "\n",
+    "$$ 1^2 + 2^2 + ... + 10^2 = 385 $$\n",
+    "The square of the sum of the first ten natural numbers is,\n",
+    "\n",
+    "$$ (1 + 2 + ... + 10)^2 = 55^2 = 3025 $$ \n",
+    "Hence the difference between the sum of the squares of the first ten natural numbers and the square of the sum is 3025 − 385 = 2640.\n",
+    "\n",
+    "Find the difference between the sum of the squares of the first one hundred natural numbers and the square of the sum."
+   ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
-   "outputs": [],
-   "source": []
+   "execution_count": 197,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Wall time: 502 µs\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "25164150"
+      ]
+     },
+     "execution_count": 197,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "def sum_squares(n):\n",
+    "    count = 0\n",
+    "    for number in range(1, n+1):\n",
+    "        count += number**2\n",
+    "        \n",
+    "    return count\n",
+    "\n",
+    "def square_sum(n):\n",
+    "    count = 0\n",
+    "    for number in range(1, n+1):\n",
+    "        count += number\n",
+    "        \n",
+    "    return count**2\n",
+    "        \n",
+    "    \n",
+    "%time square_sum(100) - sum_squares(100)"
+   ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
-   "outputs": [],
-   "source": []
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "---"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## 10001st prime\n",
+    "### Problem 7\n",
+    "\n",
+    "By listing the first six prime numbers: 2, 3, 5, 7, 11, and 13, we can see that the 6th prime is 13.\n",
+    "\n",
+    "What is the 10 001st prime number?"
+   ]
   },
   {
    "cell_type": "code",
