--- a/notebooks/1-10.ipynb
+++ b/notebooks/1-10.ipynb
@@ -482,6 +482,105 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 215,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": [
+    "def is_prime(n):\n",
+    "    for x in range(2, int((n/2)) + 1):\n",
+    "        if (n % x) == 0:\n",
+    "            return False\n",
+    "            \n",
+    "    return True\n",
+    "\n",
+    "def get_primes_by_position(n):\n",
+    "    iterator = 2\n",
+    "    count = 0\n",
+    "    while True:\n",
+    "        if is_prime(iterator):\n",
+    "            count += 1\n",
+    "        if count == n:\n",
+    "            return iterator\n",
+    "        iterator += 1"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 223,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Wall time: 19.5 s\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "104743"
+      ]
+     },
+     "execution_count": 223,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "%time get_primes_by_position(10001)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "---"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Largest product in a series\n",
+    "### Problem 8"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "The four adjacent digits in the 1000-digit number that have the greatest product are 9 × 9 × 8 × 9 = 5832.\n",
+    "\n",
+    "73167176531330624919225119674426574742355349194934\n",
+    "96983520312774506326239578318016984801869478851843\n",
+    "85861560789112949495459501737958331952853208805511\n",
+    "12540698747158523863050715693290963295227443043557\n",
+    "66896648950445244523161731856403098711121722383113\n",
+    "62229893423380308135336276614282806444486645238749\n",
+    "30358907296290491560440772390713810515859307960866\n",
+    "70172427121883998797908792274921901699720888093776\n",
+    "65727333001053367881220235421809751254540594752243\n",
+    "52584907711670556013604839586446706324415722155397\n",
+    "53697817977846174064955149290862569321978468622482\n",
+    "83972241375657056057490261407972968652414535100474\n",
+    "82166370484403199890008895243450658541227588666881\n",
+    "16427171479924442928230863465674813919123162824586\n",
+    "17866458359124566529476545682848912883142607690042\n",
+    "24219022671055626321111109370544217506941658960408\n",
+    "07198403850962455444362981230987879927244284909188\n",
+    "84580156166097919133875499200524063689912560717606\n",
+    "05886116467109405077541002256983155200055935729725\n",
+    "71636269561882670428252483600823257530420752963450\n",
+    "\n",
+    "\n",
+    "Find the thirteen adjacent digits in the 1000-digit number that have the greatest product. What is the value of this product?"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
    "metadata": {
     "collapsed": true
