--- a/notebooks/1-10.ipynb
+++ b/notebooks/1-10.ipynb
@@ -13,7 +13,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 85,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [
     {
@@ -29,7 +29,7 @@
        "233168"
       ]
      },
-     "execution_count": 85,
+     "execution_count": 1,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -63,7 +63,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 86,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
@@ -71,8 +71,18 @@
      "output_type": "stream",
      "text": [
       "4613732\n",
-      "Wall time: 501 µs\n"
+      "Wall time: 0 ns\n"
      ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "4613732"
+      ]
+     },
+     "execution_count": 2,
+     "metadata": {},
+     "output_type": "execute_result"
     }
    ],
    "source": [
@@ -98,8 +108,7 @@
     "        \n",
     "    return sum_fib\n",
     "        \n",
-    "if __name__ == \"__main__\":\n",
-    "    %time main()"
+    "%time main()"
    ]
   },
   {
@@ -123,7 +132,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 87,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -131,7 +140,7 @@
      "output_type": "stream",
      "text": [
       "6857.0\n",
-      "Wall time: 14.4 s\n"
+      "Wall time: 23.9 s\n"
      ]
     }
    ],
@@ -156,8 +165,7 @@
     "                break\n",
     "    print (test_factor)\n",
     "                \n",
-    "if __name__ == \"__main__\":\n",
-    "    %time main()           "
+    "%time main()           "
    ]
   },
   {
@@ -190,7 +198,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 88,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -199,7 +207,7 @@
        "(6, 5)"
       ]
      },
-     "execution_count": 88,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -215,7 +223,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 89,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -223,7 +231,7 @@
      "output_type": "stream",
      "text": [
       "906609\n",
-      "Wall time: 3.57 s\n"
+      "Wall time: 5.85 s\n"
      ]
     }
    ],
@@ -266,8 +274,7 @@
     "            print (palindromic)\n",
     "            break\n",
     "            \n",
-    "if __name__ == \"__main__\":\n",
-    "    %time main()   "
+    "%time main()   "
    ]
   },
   {
@@ -296,8 +303,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 163,
-   "metadata": {},
+   "execution_count": 6,
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "# smallest = (2*3*5*7*11*13*17) * factor"
@@ -305,7 +314,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 187,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
@@ -371,7 +380,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 186,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [
     {
@@ -380,13 +389,14 @@
        "232792560"
       ]
      },
-     "execution_count": 186,
+     "execution_count": 13,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "smallest = (2*3*5*7*11*13*17*19) * (2*2*2*3)"
+    "smallest = (2*3*5*7*11*13*17*19) * (2*2*2*3)\n",
+    "smallest"
    ]
   },
   {
@@ -421,14 +431,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 197,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Wall time: 502 µs\n"
+      "Wall time: 0 ns\n"
      ]
     },
     {
@@ -437,7 +447,7 @@
        "25164150"
       ]
      },
-     "execution_count": 197,
+     "execution_count": 9,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -482,7 +492,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 215,
+   "execution_count": 10,
    "metadata": {
     "collapsed": true
    },
@@ -508,14 +518,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 223,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Wall time: 19.5 s\n"
+      "Wall time: 30.3 s\n"
      ]
     },
     {
@@ -524,7 +534,7 @@
        "104743"
       ]
      },
-     "execution_count": 223,
+     "execution_count": 11,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -554,30 +564,127 @@
    "source": [
     "The four adjacent digits in the 1000-digit number that have the greatest product are 9 × 9 × 8 × 9 = 5832.\n",
     "\n",
+    "\n",
     "73167176531330624919225119674426574742355349194934\n",
+    "\n",
     "96983520312774506326239578318016984801869478851843\n",
+    "\n",
     "85861560789112949495459501737958331952853208805511\n",
+    "\n",
     "12540698747158523863050715693290963295227443043557\n",
+    "\n",
     "66896648950445244523161731856403098711121722383113\n",
+    "\n",
     "62229893423380308135336276614282806444486645238749\n",
+    "\n",
     "30358907296290491560440772390713810515859307960866\n",
+    "\n",
     "70172427121883998797908792274921901699720888093776\n",
+    "\n",
     "65727333001053367881220235421809751254540594752243\n",
+    "\n",
     "52584907711670556013604839586446706324415722155397\n",
+    "\n",
     "53697817977846174064955149290862569321978468622482\n",
+    "\n",
     "83972241375657056057490261407972968652414535100474\n",
+    "\n",
     "82166370484403199890008895243450658541227588666881\n",
+    "\n",
     "16427171479924442928230863465674813919123162824586\n",
+    "\n",
     "17866458359124566529476545682848912883142607690042\n",
+    "\n",
     "24219022671055626321111109370544217506941658960408\n",
+    "\n",
     "07198403850962455444362981230987879927244284909188\n",
+    "\n",
     "84580156166097919133875499200524063689912560717606\n",
+    "\n",
     "05886116467109405077541002256983155200055935729725\n",
+    "\n",
     "71636269561882670428252483600823257530420752963450\n",
     "\n",
     "\n",
     "Find the thirteen adjacent digits in the 1000-digit number that have the greatest product. What is the value of this product?"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 15,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "23514624000\n",
+      "Wall time: 6.99 ms\n"
+     ]
+    }
+   ],
+   "source": [
+    "from functools import reduce\n",
+    "import operator\n",
+    "\n",
+    "def main():\n",
+    "    number = open('number_problem_8.txt', 'r')\n",
+    "\n",
+    "    str_number = ''\n",
+    "\n",
+    "    for line in number:\n",
+    "        str_number+= line\n",
+    "\n",
+    "    str_number = str_number.replace('\\n', '')\n",
+    "    max_number = 0\n",
+    "\n",
+    "    for idx in range(len(str_number)-12):\n",
+    "        number_iterator = str_number[idx:idx+13].replace('\\n', '')\n",
+    "        mult = reduce(operator.mul, [int(x) for x in number_iterator], 1)\n",
+    "        if mult > max_number:\n",
+    "            max_number = mult\n",
+    "            \n",
+    "    print (max_number)\n",
+    "                       \n",
+    "%time main()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "---"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Special Pythagorean triplet\n",
+    "### Problem 9"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "A Pythagorean triplet is a set of three natural numbers, a < b < c, for which,\n",
+    "\n",
+    "$$ a^2 + b^2 = c^2 $$\n",
+    "For example, $$ 3^2 + 4^2 = 9 + 16 = 25 = 5^2. $$\n",
+    "\n",
+    "There exists exactly one Pythagorean triplet for which a + b + c = 1000.\n",
+    "Find the product abc."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": []
   },
   {
    "cell_type": "code",
