--- a/notebooks/1-10.ipynb
+++ b/notebooks/1-10.ipynb
@@ -13,7 +13,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [
     {
@@ -29,7 +29,7 @@
        "233168"
       ]
      },
-     "execution_count": 1,
+     "execution_count": 18,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -63,15 +63,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "4613732\n",
-      "Wall time: 0 ns\n"
+      "Wall time: 503 µs\n"
      ]
     },
     {
@@ -80,7 +79,7 @@
        "4613732"
       ]
      },
-     "execution_count": 2,
+     "execution_count": 19,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -104,7 +103,6 @@
     "            sum_fib += fib_limit\n",
     "\n",
     "        iterator += 1\n",
-    "    print (sum_fib)\n",
     "        \n",
     "    return sum_fib\n",
     "        \n",
@@ -132,16 +130,25 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "6857.0\n",
-      "Wall time: 23.9 s\n"
+      "Wall time: 25 s\n"
      ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "6857.0"
+      ]
+     },
+     "execution_count": 17,
+     "metadata": {},
+     "output_type": "execute_result"
     }
    ],
    "source": [
@@ -156,6 +163,7 @@
     "\n",
     "def main():\n",
     "    iterator = 1\n",
+    "    \n",
     "    while True:\n",
     "        iterator += 1\n",
     "        if (number % iterator) == 0:\n",
@@ -163,7 +171,8 @@
     "\n",
     "            if is_prime(test_factor):\n",
     "                break\n",
-    "    print (test_factor)\n",
+    "                \n",
+    "    return test_factor\n",
     "                \n",
     "%time main()           "
    ]
@@ -198,7 +207,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 20,
    "metadata": {},
    "outputs": [
     {
@@ -207,7 +216,7 @@
        "(6, 5)"
       ]
      },
-     "execution_count": 4,
+     "execution_count": 20,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -223,16 +232,25 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 21,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "906609\n",
-      "Wall time: 5.85 s\n"
+      "Wall time: 5.46 s\n"
      ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "906609"
+      ]
+     },
+     "execution_count": 21,
+     "metadata": {},
+     "output_type": "execute_result"
     }
    ],
    "source": [
@@ -271,8 +289,8 @@
     "        factors_number = get_factos(palindromic)\n",
     "        three_digits_factors = [x for x in factors_number if len(str(x)) == 3 and len(str(int(palindromic/x))) == 3]\n",
     "        if len(three_digits_factors) == 2:\n",
-    "            print (palindromic)\n",
-    "            break\n",
+    "            return (palindromic)\n",
+    "\n",
     "            \n",
     "%time main()   "
    ]
@@ -303,7 +321,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 22,
    "metadata": {
     "collapsed": true
    },
@@ -314,7 +332,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 23,
    "metadata": {},
    "outputs": [
     {
@@ -380,7 +398,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 24,
    "metadata": {},
    "outputs": [
     {
@@ -389,7 +407,7 @@
        "232792560"
       ]
      },
-     "execution_count": 13,
+     "execution_count": 24,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -431,7 +449,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 25,
    "metadata": {},
    "outputs": [
     {
@@ -447,7 +465,7 @@
        "25164150"
       ]
      },
-     "execution_count": 9,
+     "execution_count": 25,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -492,7 +510,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 26,
    "metadata": {
     "collapsed": true
    },
@@ -518,14 +536,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 27,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Wall time: 30.3 s\n"
+      "Wall time: 31.6 s\n"
      ]
     },
     {
@@ -534,7 +552,7 @@
        "104743"
       ]
      },
-     "execution_count": 11,
+     "execution_count": 27,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -611,16 +629,25 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 46,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "23514624000\n",
-      "Wall time: 6.99 ms\n"
+      "Wall time: 7.02 ms\n"
      ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "23514624000"
+      ]
+     },
+     "execution_count": 46,
+     "metadata": {},
+     "output_type": "execute_result"
     }
    ],
    "source": [
@@ -628,7 +655,7 @@
     "import operator\n",
     "\n",
     "def main():\n",
-    "    number = open('number_problem_8.txt', 'r')\n",
+    "    number = open(r'data/number_problem_8.txt', 'r')\n",
     "\n",
     "    str_number = ''\n",
     "\n",
@@ -644,7 +671,7 @@
     "        if mult > max_number:\n",
     "            max_number = mult\n",
     "            \n",
-    "    print (max_number)\n",
+    "    return max_number\n",
     "                       \n",
     "%time main()"
    ]
