partial solution - problem 9

--- a/notebooks/1-10.ipynb
+++ b/notebooks/1-10.ipynb
@@ -13,14 +13,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Wall time: 0 ns\n"
+      "CPU times: user 195 µs, sys: 21 µs, total: 216 µs\n",
+      "Wall time: 223 µs\n"
      ]
     },
     {
@@ -29,7 +30,7 @@
        "233168"
       ]
      },
-     "execution_count": 18,
+     "execution_count": 1,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -63,14 +64,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Wall time: 503 µs\n"
+      "CPU times: user 726 µs, sys: 81 µs, total: 807 µs\n",
+      "Wall time: 1.1 ms\n"
      ]
     },
     {
@@ -79,7 +81,7 @@
        "4613732"
       ]
      },
-     "execution_count": 19,
+     "execution_count": 2,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -130,14 +132,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Wall time: 25 s\n"
+      "CPU times: user 12.5 s, sys: 3.53 ms, total: 12.5 s\n",
+      "Wall time: 12.5 s\n"
      ]
     },
     {
@@ -146,7 +149,7 @@
        "6857.0"
       ]
      },
-     "execution_count": 17,
+     "execution_count": 3,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -207,7 +210,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -216,7 +219,7 @@
        "(6, 5)"
       ]
      },
-     "execution_count": 20,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -232,14 +235,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Wall time: 5.46 s\n"
+      "CPU times: user 3.37 s, sys: 4.09 ms, total: 3.37 s\n",
+      "Wall time: 3.37 s\n"
      ]
     },
     {
@@ -248,7 +252,7 @@
        "906609"
       ]
      },
-     "execution_count": 21,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -321,10 +325,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
-   "metadata": {
-    "collapsed": true
-   },
+   "execution_count": 6,
+   "metadata": {},
    "outputs": [],
    "source": [
     "# smallest = (2*3*5*7*11*13*17) * factor"
@@ -332,7 +334,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
@@ -398,7 +400,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
@@ -407,7 +409,7 @@
        "232792560"
       ]
      },
-     "execution_count": 24,
+     "execution_count": 8,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -449,14 +451,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Wall time: 0 ns\n"
+      "CPU times: user 73 µs, sys: 0 ns, total: 73 µs\n",
+      "Wall time: 80.3 µs\n"
      ]
     },
     {
@@ -465,7 +468,7 @@
        "25164150"
       ]
      },
-     "execution_count": 25,
+     "execution_count": 9,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -510,10 +513,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
-   "metadata": {
-    "collapsed": true
-   },
+   "execution_count": 10,
+   "metadata": {},
    "outputs": [],
    "source": [
     "def is_prime(n):\n",
@@ -536,14 +537,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Wall time: 31.6 s\n"
+      "CPU times: user 18.2 s, sys: 20.2 ms, total: 18.2 s\n",
+      "Wall time: 18.2 s\n"
      ]
     },
     {
@@ -552,7 +554,7 @@
        "104743"
       ]
      },
-     "execution_count": 27,
+     "execution_count": 11,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -629,14 +631,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 46,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Wall time: 7.02 ms\n"
+      "CPU times: user 5.73 ms, sys: 9 µs, total: 5.74 ms\n",
+      "Wall time: 5.72 ms\n"
      ]
     },
     {
@@ -645,7 +648,7 @@
        "23514624000"
       ]
      },
-     "execution_count": 46,
+     "execution_count": 12,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -706,19 +709,48 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
+   "execution_count": 20,
+   "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "'''\n",
+    "c²-b² = a²\n",
+    "(c+b)(c-b) = a*a\n",
+    "(c-b) = (a*a)/(1000 - a)\n",
+    "'''\n",
+    "\n",
+    "int_a = []\n",
+    "for a in range(1, 1000):\n",
+    "    result = (a*a)/(1000-a)\n",
+    "    if result.is_integer():\n",
+    "        if (1000-result) > 333:\n",
+    "            int_a.append(a)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 21,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[200, 375, 500]"
+      ]
+     },
+     "execution_count": 21,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "int_a"
+   ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
+   "metadata": {},
    "outputs": [],
    "source": []
   }
@@ -739,7 +771,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.1"
+   "version": "3.6.4"
   }
  },
  "nbformat": 4,
