--- a/notebooks/1-10.ipynb
+++ b/notebooks/1-10.ipynb
@@ -709,42 +709,72 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "'''\n",
-    "c²-b² = a²\n",
-    "(c+b)(c-b) = a*a\n",
-    "(c-b) = (a*a)/(1000 - a)\n",
-    "'''\n",
-    "\n",
-    "int_a = []\n",
-    "for a in range(1, 1000):\n",
-    "    result = (a*a)/(1000-a)\n",
-    "    if result.is_integer():\n",
-    "        if (1000-result) > 333:\n",
-    "            int_a.append(a)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 58,
    "metadata": {},
    "outputs": [
     {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "CPU times: user 90 µs, sys: 1e+03 ns, total: 91 µs\n",
+      "Wall time: 96.6 µs\n"
+     ]
+    },
+    {
      "data": {
       "text/plain": [
-       "[200, 375, 500]"
+       "31875000.0"
       ]
      },
-     "execution_count": 21,
+     "execution_count": 58,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "int_a"
+    "'''\n",
+    "c²-b² = a²\n",
+    "(c+b)(c-b) = a*a\n",
+    "(c-b) = (a*a)/(1000 - a)\n",
+    "\n",
+    "\n",
+    "c-b = (a*a)/(1000 - a)\n",
+    "c+b = (1000 - a)\n",
+    "\n",
+    "c = [(a*a)/(1000 - a) + (1000 - a)]/2\n",
+    "\n",
+    "\n",
+    "'''\n",
+    "\n",
+    "def main():\n",
+    "    a_values = []\n",
+    "    result_values = []\n",
+    "    for a in range(1, 333):\n",
+    "        result = (a*a)/(1000-a)\n",
+    "        if result.is_integer():\n",
+    "            c = ((a*a)/(1000 - a) + (1000 - a))/2\n",
+    "            b = 1000 - (c+a)\n",
+    "\n",
+    "            return (a*b*c)\n",
+    "        \n",
+    "%time main()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Summation of primes\n",
+    "### Problem 10 "
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "The sum of the primes below 10 is 2 + 3 + 5 + 7 = 17.\n",
+    "\n",
+    "Find the sum of all the primes below two million.\n"
    ]
   },
   {
