partial solution - problem 10 add 11-20 notebook

--- a/notebooks/1-10.ipynb
+++ b/notebooks/1-10.ipynb
@@ -20,8 +20,8 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "CPU times: user 195 µs, sys: 21 µs, total: 216 µs\n",
-      "Wall time: 223 µs\n"
+      "CPU times: user 155 µs, sys: 0 ns, total: 155 µs\n",
+      "Wall time: 158 µs\n"
      ]
     },
     {
@@ -71,8 +71,8 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "CPU times: user 726 µs, sys: 81 µs, total: 807 µs\n",
-      "Wall time: 1.1 ms\n"
+      "CPU times: user 44 µs, sys: 5 µs, total: 49 µs\n",
+      "Wall time: 52.5 µs\n"
      ]
     },
     {
@@ -139,8 +139,8 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "CPU times: user 12.5 s, sys: 3.53 ms, total: 12.5 s\n",
-      "Wall time: 12.5 s\n"
+      "CPU times: user 11.7 s, sys: 1.37 ms, total: 11.7 s\n",
+      "Wall time: 11.7 s\n"
      ]
     },
     {
@@ -776,6 +776,47 @@
     "\n",
     "Find the sum of all the primes below two million.\n"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 45,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def is_prime(n):\n",
+    "    for x in range(2, int((n/2)) + 1):\n",
+    "        if (n % x) == 0:\n",
+    "            return False\n",
+    "            \n",
+    "    return True\n",
+    "\n",
+    "def get_primes(n):\n",
+    "    primes = []\n",
+    "    for number in range(2, n+1):\n",
+    "        if is_prime(number):\n",
+    "            primes.append(number)\n",
+    "            \n",
+    "    return primes\n",
+    "\n",
+    "def no_rest(number, prime_factors):\n",
+    "    for prime in prime_factors:\n",
+    "        if number % prime == 0:\n",
+    "            return False\n",
+    "    \n",
+    "    return True\n",
+    "\n",
+    "prime_factors = get_primes(50000)\n",
+    "sum_primes = 2+3+5+7+11+13+17\n",
+    "\n",
+    "range_numbers = [x for x in range(2, 2000000) if no_rest(x, prime_factors)]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   },
   {
    "cell_type": "code",
