--- a/notebooks/1-10.ipynb
+++ b/notebooks/1-10.ipynb
@@ -132,15 +132,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "CPU times: user 11.7 s, sys: 1.37 ms, total: 11.7 s\n",
-      "Wall time: 11.7 s\n"
+      "Wall time: 14.4 s\n"
      ]
     },
     {
@@ -149,7 +148,7 @@
        "6857.0"
       ]
      },
-     "execution_count": 3,
+     "execution_count": 14,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -158,7 +157,7 @@
     "number = 600851475143\n",
     "\n",
     "def is_prime(n):\n",
-    "    for x in range(2, int((n/2)) + 1):\n",
+    "    for x in range(3, int(n ** 0.5) + 1, 2):\n",
     "        if n % x == 0:\n",
     "            return False\n",
     "            \n",
@@ -326,7 +325,9 @@
   {
    "cell_type": "code",
    "execution_count": 6,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "# smallest = (2*3*5*7*11*13*17) * factor"
@@ -513,8 +514,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
-   "metadata": {},
+   "execution_count": 19,
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "def is_prime(n):\n",
@@ -537,15 +540,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 20,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "CPU times: user 18.2 s, sys: 20.2 ms, total: 18.2 s\n",
-      "Wall time: 18.2 s\n"
+      "Wall time: 31 s\n"
      ]
     },
     {
@@ -554,7 +556,7 @@
        "104743"
       ]
      },
-     "execution_count": 11,
+     "execution_count": 20,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -780,7 +782,9 @@
   {
    "cell_type": "code",
    "execution_count": 45,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "def is_prime(n):\n",
@@ -814,14 +818,18 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": []
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": []
   }
@@ -842,7 +850,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.4"
+   "version": "3.6.1"
   }
  },
  "nbformat": 4,
