--- a/notebooks/11-20.ipynb
+++ b/notebooks/11-20.ipynb
@@ -231,10 +231,10 @@
    "source": [
     "from functools import reduce\n",
     "import operator\n",
+    "\n",
     "number = open(r'data/number_problem_13.txt', 'r')\n",
     "\n",
     "def main():\n",
-    "\n",
     "    sum_number = 0\n",
     "    str_number = ''\n",
     "\n",
@@ -247,25 +247,57 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
+   "cell_type": "markdown",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "source": [
+    "## Power digit sum\n",
+    "### Problem 16"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "2^(15) = 32768 and the sum of its digits is 3 + 2 + 7 + 6 + 8 = 26.\n",
+    "\n",
+    "What is the sum of the digits of the number 2^(1000)?"
+   ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 54,
    "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Wall time: 0 ns\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "1366"
+      ]
+     },
+     "execution_count": 54,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "def main():\n",
+    "    number = 2**(1000)\n",
+    "\n",
+    "    sum_number = 0\n",
+    "    for x in str(number):\n",
+    "        sum_number += int(x)\n",
+    "    \n",
+    "    return sum_number\n",
+    "\n",
+    "%time main()"
+   ]
   },
   {
    "cell_type": "code",
