--- a/notebooks/11-20.ipynb
+++ b/notebooks/11-20.ipynb
@@ -300,18 +300,72 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
+   "cell_type": "markdown",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "source": [
+    "## Factorial digit sum\n",
+    "### Problem 20"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "n! means n × (n − 1) × ... × 3 × 2 × 1\n",
+    "\n",
+    "For example, 10! = 10 × 9 × ... × 3 × 2 × 1 = 3628800,\n",
+    "and the sum of the digits in the number 10! is 3 + 6 + 2 + 8 + 8 + 0 + 0 = 27.\n",
+    "\n",
+    "Find the sum of the digits in the number 100!"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 61,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Wall time: 0 ns\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "648"
+      ]
+     },
+     "execution_count": 61,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "def factorial(x):\n",
+    "    if x == 0:\n",
+    "        return 1\n",
+    "    \n",
+    "    else:\n",
+    "        return x*factorial(x-1)\n",
+    "    \n",
+    "def main():\n",
+    "    number = factorial(100)\n",
+    "    \n",
+    "    sum_number = 0\n",
+    "    for x in str(number):\n",
+    "        sum_number += int(x)\n",
+    "    \n",
+    "    return sum_number\n",
+    "\n",
+    "%time main()"
+   ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
+   "metadata": {},
    "outputs": [],
    "source": []
   }
