--- a/notebooks/1-10.ipynb
+++ b/notebooks/1-10.ipynb
@@ -781,57 +781,37 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 45,
-   "metadata": {
-    "collapsed": true
-   },
-   "outputs": [],
+   "execution_count": 15,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Wall time: 7.1 s\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "142913828922"
+      ]
+     },
+     "execution_count": 15,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "def is_prime(n):\n",
-    "    for x in range(2, int((n/2)) + 1):\n",
+    "    for x in range(3, int(n ** 0.5) + 1, 2):\n",
     "        if (n % x) == 0:\n",
     "            return False\n",
     "            \n",
     "    return True\n",
     "\n",
-    "def get_primes(n):\n",
-    "    primes = []\n",
-    "    for number in range(2, n+1):\n",
-    "        if is_prime(number):\n",
-    "            primes.append(number)\n",
-    "            \n",
-    "    return primes\n",
-    "\n",
-    "def no_rest(number, prime_factors):\n",
-    "    for prime in prime_factors:\n",
-    "        if number % prime == 0:\n",
-    "            return False\n",
-    "    \n",
-    "    return True\n",
-    "\n",
-    "prime_factors = get_primes(50000)\n",
-    "sum_primes = 2+3+5+7+11+13+17\n",
-    "\n",
-    "range_numbers = [x for x in range(2, 2000000) if no_rest(x, prime_factors)]"
+    "%time (sum([x for x in range(2,2000000) if (x % 2 != 0) and (x % 3 != 0) and is_prime(x)]) + 5)"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
