--- a/notebooks/41-50.ipynb
+++ b/notebooks/41-50.ipynb
@@ -12,9 +12,9 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "The series, 1^1 + 22 + 33 + ... + 1010 = 10405071317.\n",
+    "The series,  $1^1 + 2^2 + 3^3 + ... + 10^{10} = 10405071317. $\n",
     "\n",
-    "Find the last ten digits of the series, 11 + 22 + 33 + ... + 10001000."
+    "Find the last ten digits of the series, $ 1^1 + 2^2 + 3^3 + ... + 1000^{1000}.$"
    ]
   },
   {
@@ -46,7 +46,7 @@
     "\n",
     "    for i in range(1,1001):\n",
     "        sum_total += i**i\n",
-    "    #str(sum_total)[:10]\n",
+    "\n",
     "    return str(sum_total)[-10:]\n",
     "\n",
     "%time main()"
