--- a/notebooks/41-50.ipynb
+++ b/notebooks/41-50.ipynb
@@ -51,6 +51,91 @@
     "\n",
     "%time main()"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Goldbach's other conjecture\n",
+    "### Problem 46"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "It was proposed by Christian Goldbach that every odd composite number can be written as the sum of a prime and twice a square.\n",
+    "\n",
+    "$9 = 7 + 2×1^2$\n",
+    "\n",
+    "$15 = 7 + 2×2^2$\n",
+    "\n",
+    "$21 = 3 + 2×3^2$\n",
+    "\n",
+    "$25 = 7 + 2×3^2$\n",
+    "\n",
+    "$27 = 19 + 2×2^2$\n",
+    "\n",
+    "$33 = 31 + 2×1^2$\n",
+    "\n",
+    "\n",
+    "It turns out that the conjecture was false.\n",
+    "\n",
+    "What is the smallest odd composite that cannot be written as the sum of a prime and twice a square?"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 43,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "5777\n",
+      "Wall time: 5.18 s\n"
+     ]
+    }
+   ],
+   "source": [
+    "def is_prime(n):\n",
+    "    for x in range(3, int(n ** 0.5) + 1, 2):\n",
+    "        if (n % x) == 0:\n",
+    "            return False\n",
+    "            \n",
+    "    return True\n",
+    "        \n",
+    "def get_primes_by_limit(n):\n",
+    "    primes = [2]\n",
+    "    primes.extend([x for x in range(3,n,2) if is_prime(x)])\n",
+    "    return primes\n",
+    "\n",
+    "def main():\n",
+    "    iterator = 9\n",
+    "    while True:\n",
+    "        if not is_prime(iterator):\n",
+    "            aux = 1\n",
+    "            primes = get_primes_by_limit(iterator)\n",
+    "\n",
+    "            for prime in primes:\n",
+    "                aux = 0\n",
+    "                test_number = 0\n",
+    "                while test_number < iterator:\n",
+    "                    aux += 1\n",
+    "                    test_number = prime + 2 * (aux*aux)\n",
+    "\n",
+    "                if test_number == iterator:\n",
+    "                    break\n",
+    "\n",
+    "            if test_number != iterator:\n",
+    "                print (iterator)\n",
+    "                break\n",
+    "\n",
+    "        iterator += 2\n",
+    "        \n",
+    "%time main()"
+   ]
   }
  ],
  "metadata": {
