--- a/notebooks/21-30.ipynb
+++ b/notebooks/21-30.ipynb
@@ -76,6 +76,87 @@
    "source": [
     "%time main()"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Names scores\n",
+    "### Problem 22"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Using names.txt, a 46K text file containing over five-thousand first names, begin by sorting it into alphabetical order. Then working out the alphabetical value for each name, multiply this value by its alphabetical position in the list to obtain a name score.\n",
+    "\n",
+    "For example, when the list is sorted into alphabetical order, COLIN, which is worth 3 + 15 + 12 + 9 + 14 = 53, is the 938th name in the list. So, COLIN would obtain a score of 938 × 53 = 49714.\n",
+    "\n",
+    "What is the total of all the name scores in the file?"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 73,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": [
+    "import string\n",
+    "import pandas as pd"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 127,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Wall time: 19.6 ms\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "871198282"
+      ]
+     },
+     "execution_count": 127,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "def main():\n",
+    "\n",
+    "    f = open(r'data/p022_names.txt', 'r')\n",
+    "\n",
+    "    data = f.readlines()[0].split(',')\n",
+    "    data = sorted([name.replace('\"', '') for name in data])\n",
+    "    sum_total = 0\n",
+    "    position = 1\n",
+    "\n",
+    "    for name in data:\n",
+    "\n",
+    "        name = name.replace('\"', '')\n",
+    "        sum_letter = 0\n",
+    "\n",
+    "        for letter in name:\n",
+    "            sum_letter += string.ascii_uppercase.index(letter) + 1\n",
+    "\n",
+    "        sum_total += (sum_letter * position)\n",
+    "\n",
+    "        position += 1\n",
+    "        \n",
+    "    return sum_total\n",
+    "\n",
+    "%time main()"
+   ]
   }
  ],
  "metadata": {
