--- a/notebooks/21-30.ipynb
+++ b/notebooks/21-30.ipynb
@@ -29,7 +29,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 128,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -46,20 +46,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 129,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "1\n",
-      "4150\n",
-      "4151\n",
-      "54748\n",
-      "92727\n",
-      "93084\n",
-      "194979\n"
+      "Wall time: 4.52 s\n"
      ]
     },
     {
@@ -68,7 +62,7 @@
        "443839"
       ]
      },
-     "execution_count": 20,
+     "execution_count": 129,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -157,6 +151,144 @@
     "\n",
     "%time main()"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## 1000-digit Fibonacci number\n",
+    "### Problem 25"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "The Fibonacci sequence is defined by the recurrence relation:\n",
+    "\n",
+    "Fn = Fn−1 + Fn−2, where F1 = 1 and F2 = 1.\n",
+    "Hence the first 12 terms will be:\n",
+    "\n",
+    "$ F1 = 1$ \n",
+    "\n",
+    "$F2 = 1$\n",
+    "\n",
+    "$F3 = 2$\n",
+    "\n",
+    "$F4 = 3$\n",
+    "\n",
+    "$F5 = 5$\n",
+    "\n",
+    "$F6 = 8$\n",
+    "\n",
+    "$F7 = 13$\n",
+    "\n",
+    "$F8 = 21$\n",
+    "\n",
+    "$F9 = 34$\n",
+    "\n",
+    "$F10 = 55$\n",
+    "\n",
+    "$F11 = 89$\n",
+    "\n",
+    "$F12 = 144$\n",
+    "\n",
+    "The 12th term, F12, is the first term to contain three digits.\n",
+    "\n",
+    "What is the index of the first term in the Fibonacci sequence to contain 1000 digits?"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 194,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def main(n):\n",
+    "    fibs = [0, 1]\n",
+    "    while True:\n",
+    "        next_fib = fibs[-1] + fibs[-2]\n",
+    "        if len(str(next_fib)) >= 1000:\n",
+    "            break\n",
+    "        fibs.append(next_fib)\n",
+    "    return len(fibs)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 196,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "4782"
+      ]
+     },
+     "execution_count": 196,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "len(fib(1000))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 173,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": [
+    "def fib_to(n):\n",
+    "    fibs = [0, 1]\n",
+    "    for i in range(2, n+1):\n",
+    "        fibs.append(fibs[-1] + fibs[-2])\n",
+    "        print (i)\n",
+    "    return fibs, i"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 175,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "2\n",
+      "3\n",
+      "4\n",
+      "5\n"
+     ]
+    },
+    {
+     "ename": "IndexError",
+     "evalue": "tuple index out of range",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[1;31mIndexError\u001b[0m                                Traceback (most recent call last)",
+      "\u001b[1;32m<ipython-input-175-ed0eb02e8ca0>\u001b[0m in \u001b[0;36m<module>\u001b[1;34m()\u001b[0m\n\u001b[1;32m----> 1\u001b[1;33m \u001b[0mfib_to\u001b[0m\u001b[1;33m(\u001b[0m\u001b[1;36m5\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m[\u001b[0m\u001b[1;36m5\u001b[0m\u001b[1;33m]\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m",
+      "\u001b[1;31mIndexError\u001b[0m: tuple index out of range"
+     ]
+    }
+   ],
+   "source": [
+    "fib_to(5)\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
