--- a/notebooks/11-20.ipynb
+++ b/notebooks/11-20.ipynb
@@ -1026,6 +1026,71 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "## Lattice paths\n",
+    "### Problem 15"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Starting in the top left corner of a 2×2 grid, and only being able to move to the right and down, there are exactly 6 routes to the bottom right corner.\n",
+    "\n",
+    "\n",
+    "How many such routes are there through a 20×20 grid?"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "LLDD\n",
+    "\n",
+    "LDLD\n",
+    "\n",
+    "LDDL\n",
+    "\n",
+    "DLLD\n",
+    "\n",
+    "DLDL\n",
+    "\n",
+    "DDLL\n",
+    "\n",
+    "P4 (2,2) = 4!/(2!*2!) = 6"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "P40 (20,20) =  40!/(20!*20!) "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 79,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "137846528820.0"
+      ]
+     },
+     "execution_count": 79,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "import math\n",
+    "(math.factorial(40))/ (math.factorial(20))**2"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "## Power digit sum\n",
     "### Problem 16"
    ]
